2011-XX-XX  UnNetHack 3.5.4
	* changing color of monster with config line:
	  MONSTERCOLOR=acid blob:lightcyan
	* Fixed crashes when attacking long worms on flipped levels

	* user interface improvements:
	  - New category menu option: "Unidentified items"
	  - 'X' toggles twoweaponing, explore mode is on alt-x resp. #xplore

	* vanilla bug fixes:
	  - C343-198

2010-09-04  UnNetHack 3.5.3
	* Conflict makes blackmarket shopkeeper angry
	* Fully eroded armor gets destroyed
	* Lowered the needed experience level for the quest
	* HTML dump
	* Pi day support
	* Reduced Sokoban branch by one level
	* Vampires as player selectable starting race (from Slash'Em)
	* Remove instadeath poison, reduce hp and maxhp instead (from SporkHack)

	* patches:
	  - Conduct: Elbereth tracking (by Ray Kulhanek)
	  - Dungeon Map Overview 3 (by Hojita Discordia)
	  - Extended Conducts v2.3 (by Andreas Dorn)
	  - Paranoid Patch (by various)
	  - Splittable #adjust Patch (by Sam Dennis and Jukka Lahtinen)
	  - Tutorial (by Alex Smith)

	* user interface improvements:
	  - auto-ID of rings of regeneration when hurt
	  - automatically talk to monsters if only one is next to the player
	  - Ctrl-e automatically writes resp. engraves "Elbereth"
	  - multiple items on floor shown in reverse video
	  - show price of items in shops without #chatting
	  - Curses GUI
	  - visualized HP bar
	  - new Paranoid option: paranoid_trap, asks for confirmation before
	      walking into known traps

	* vanilla bug fixes:
	  - C343-12, C343-94, C343-189, C343-235
	  - SC343-8, SC343-20

	* added items:
	  - scroll of flood

	* removed items:
	  - scroll of amnesia

	* new rooms:
	  - instrument shop (adapted from NetHack Brass RS)
	  - pet stores (from Slash'Em)
	  - tin shops (from Slash'Em)

	* new monster:
	  - giant turtle (blocks vision) (from SporkHack)


2010-01-10  UnNetHack 3.5.2-1
	Crash bugfix: Prevent alchemizing not existing potions


2009-12-09  UnNetHack 3.5.2
	* Increased skill levels